[metadata]
name = aionic
version = 1.0.0
author = Alexey Matveev
author_email = tippet@yandex.ru
description = NIC.RU Async API Python library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/shizacat/aionic
classifiers =
    Topic :: Internet :: Name Service (DNS)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = aionic
packages = find:
python_requires = >=3.6
install_requires =
    oauthlib >= 3.1.1
    aiohttp-oauthlib

[options.packages.find]
where = aionic
